# audio-engine

./: Cargo.toml  TODO
src/: _main.rs  audio.rs  constants.rs  convert.rs  engine.rs  lib.rs  main.rs  midi.rs  note.rs  processor.rs  ring.rs  synth.rs  util.rs
src/audio/: adapter.rs  buffer.rs  clip.rs  delay.rs  delay_line.rs  operations.rs  resample.rs  ring.rs  sample.rs
src/processor/: autopan.rs  chord.rs  delay.rs  filter.rs  gain.rs  io.rs  mixer.rs  pipeline.rs  sampler.rs  saturator.rs  util.rs
src/synth/: envelope.rs  mod.rs  oscillators.rs  voice.rs
src/track/: audio.rs  mod.rs  timeline.rs
src/voice/: envelope.rs  mod.rs  oscillator.rs
