[package]
name = "daw-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basedrop = "0.1.2"
bumpalo = "3.13.0"
cpal = "0.15.2"
hound = "3.5.0"
itertools = "0.11.0"
midir = "0.9.1"
rand = "0.8.5"
ringbuf-basedrop = "0.1.1"
slotmap = "1.0.6"
thiserror = "1.0.48"
